In progress - pre-release
    - Added Quantum Fourier transform example in "examples/qft.cpp"
    - Added new functions in "operations.h":
          qpp::QFT() - Qudit Quantum Fourier transform (includes qubit QFT as a
                       special case)
    - Added new member functions for qpp::Gates:
          qpp::Gates::RX()   - rotation around X
          qpp::Gates::RY()   - rotation around Y
          qpp::Gates::RZ()   - rotation around Z
          qpp::Gates.SWAPd() - Qudit SWAP gate
    - Added a suite of stress tests in "stress_tests" (only for POSIX systems)
    - Added Qiskit and QuTiP stress tests in "stress_tests/python"

Version 1.0 - 3 July 2018
    - Added full support for reversible classical circuits, added
      "classes/reversible.h" header file that contains the following classes:
          qpp::Dynamic_bitset - Bitsets of variable length
          qpp::Bit_circuit    - Classical reversible circuits
    - Added "examples/reversible.cpp" example
    - The path to MATLAB can now be specified in the CMake command line (not
      hard coded anymore), such as
          cmake -DWITH_MATLAB="/Applications/MATLAB_R2017b.app" ..
    - qpp::ket operator "" _ket(), qpp::ket operator "" _bra() and
      qpp::ket operator "" _prj() are now inside the newly introduced inline
      namespace qpp::literals
    - Minor bug in qpp::Exception::what(), thanks Nick Lewycky for spotting it
    - Updated the Wiki

Version 1.0-rc4 - Release Candidate 4, 24 January 2018
    - Changed qpp::ket operator "" _q() to qpp::ket operator "" _ket()
    - Added qpp::bra operator "" _bra() and qpp::cmat operator "" _prj() as well
    - Updated documentation

Version 1.0-rc3 - Release Candidate 3, 21 January 2018
    - License change from GPL to MIT
    - Added Visual Studio 2017 solution
    - Added support for AppVeyor continuous integration 
    - Added support for reversible classical circuits, via the following
      classes in "experimental.h":